--- a/proj.win32/Chess.vcxproj
+++ b/proj.win32/Chess.vcxproj
@@ -148,12 +148,18 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\GameLayer.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\HomeScene.cpp" />
+    <ClCompile Include="..\Classes\HudLayer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\GameLayer.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\HomeScene.h" />
+    <ClInclude Include="..\Classes\HudLayer.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
